# llm-gateway

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.bench.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: app_state.py  config.py  dependencies.py  main.py
app/accounting/: __init__.py  estimator.py  ledger.lua  ledger.py  pricing.py  token_bucket.lua  token_bucket.py  token_bucket_refund.lua
app/auth/: __init__.py  tenant.py
app/backends/: __init__.py  base.py  errors.py  litellm_backend.py  registry.py  vllm_backend.py
app/cache/: __init__.py  embedder.py  jailbreak.py  key.py  semantic.py
app/core/: configure_llm_environment.py  mini_lm_sentence_transformer.py  pii_analyzer.py
app/guardrails/: __init__.py  base.py  errors.py  jailbreak.py  pii.py  registry.py
app/middleware/: pii_middleware.py
app/models/: llm_response.py  semantic_cache_response.py
app/observability/: __init__.py  langfuse.py  startup.py  tracing.py
app/redis/: redis_client.py
app/routers/: chat.py  chat_v2.py
app/routing/: routing.py
app/schemas/: __init__.py  chat.py  tenant.py
app/security/: code_detection_service.py  pii_service.py  semantic_security_middleware.py  semantic_security_service.py
app/services/: chat_completion_service.py  chat_completion_service_interface.py  lite_llm_service.py  lite_llm_service_interface.py  semantic_cache.py  semantic_cache_interface.py
baseline/: Dockerfile  __init__.py  config.py  pyproject.toml  server.py
bench/: __init__.py  client.py  load.py  metrics.py  prompts.py  pyproject.toml  report.py  runner.py  scenarios.sh
bench/results/: RESULTS.md
bench/tests/integration/: test_bench_smoke.py
bench/tests/unit/: test_bench_metrics.py
deploy/k8s/: README.md  baseline.yaml  configmap.yaml  gateway.yaml  namespace.yaml  nvidia-device-plugin.yaml  redis.yaml  secret.yaml.example  vllm-large.yaml  vllm-small.yaml
docs/benchmark/: README.md
scripts/: download_models.py
tests/integration/: test_jailbreak_guardrail.py  test_semantic_cache.py
tests/unit/: test_auth_tenant.py  test_backend_registry.py  test_chat_route.py  test_chat_route_rate_limited.py  test_estimator.py  test_guardrails_pii.py  test_langfuse_attrs.py  test_ledger.py  test_pricing.py  test_routing.py  test_schemas_chat.py  test_semantic_cache.py  test_token_bucket.py  test_tracing.py  test_vllm_backend.py
