[project]
name = "llm-gateway"
version = "0.2.0"
description = "Multi-tenant LLM gateway with vLLM backend, routing, rate limiting, and cost accounting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-limiter>=0.1.6",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28",
    "langfuse>=3.11.2",
    "litellm>=1.80.11",
    "numpy>=2.4.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "presidio-analyzer[2-2-360]>=2.2.360",
    "pydantic>=2.10",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=7.1.0",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.8",
    "pyjwt[crypto]>=2.9",
    "async-lru>=2.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=6.0",
    "testcontainers[redis]>=4.9",
    "respx>=0.22",
]
bench = [
    "transformers>=4.46",
    "torch>=2.5",
    "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC", "RUF", "PL", "N", "TCH", "PTH"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.12"
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["presidio_analyzer.*", "sentence_transformers.*", "langfuse.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
