[project]
name = "hf-baseline"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.128.0",
    "uvicorn>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "transformers>=4.45",
    "torch>=2.6.0",
    "accelerate>=0.33",
    "sentencepiece>=0.2",
    "pytorch-triton-rocm>=3.2.0; sys_platform == 'linux'"
]

[[tool.uv.index]]
name = "rocm"
url = "https://download.pytorch.org/whl/rocm6.1"
explicit = true

[tool.uv.sources]
torch = { index = "rocm" }
torchvision = { index = "rocm" }
torchaudio = { index = "rocm" }
pytorch-triton-rocm = { index = "rocm" }
