[project]
name = "bench"
version = "0.1.0"
description = "Benchmark harness for the LLM gateway and baseline"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
   "fastapi[standard]>=0.128.0",
    "uvicorn>=0.32",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
